--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,28 +3,30 @@
     <group>
         <item
             android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home"
             android:title="@string/menu.home" />
         <item
             android:id="@+id/nav_arrivals"
+            android:icon="@drawable/ic_arrival"
             android:title="@string/menu.arrivals" />
         <item
             android:id="@+id/nav_departures"
+            android:icon="@drawable/ic_departure"
             android:title="@string/menu.departures" />
     </group>
 
-    <item
-        android:title="@string/menu.other">
+    <item android:title="@string/menu.other">
 
         <menu>
 
             <item
                 android:id="@+id/nav_profile"
-                android:title="@string/menu.profile"
-                />
+                android:icon="@drawable/ic_profile"
+                android:title="@string/menu.profile" />
             <item
                 android:id="@+id/nav_settings"
-                android:title="@string/menu.settings"
-                />
+                android:icon="@drawable/ic_settings"
+                android:title="@string/menu.settings" />
         </menu>
     </item>
 
